# rdk-control

./: .gitignore  CONTRIBUTING.md  NOTICE  configure.ac
doxygen/: build_docs.py  ctrlm_api_all  ctrlm_api_hal  ctrlm_api_hal_rf4ce  ctrlm_api_ipc  ctrlm_api_ipc_device_update  ctrlm_api_ipc_rcu  ctrlm_api_ipc_voice  ctrlm_dox_hal_rf4ce.h  ctrlm_dox_ipc.h  ctrlm_dox_ipc_device_update.h  ctrlm_dox_ipc_rcu.h  ctrlm_dox_ipc_voice.h
doxygen/iarm/: libIARM.h  libIBus.h
include/: ctrlm_hal.h  ctrlm_hal_ble.h  ctrlm_hal_ip.h  ctrlm_hal_rf4ce.h  ctrlm_ipc.h  ctrlm_ipc_ble.h  ctrlm_ipc_device_update.h  ctrlm_ipc_key_codes.h  ctrlm_ipc_rcu.h  ctrlm_ipc_voice.h
scripts/: json_combine.py  json_to_header.py
src/: Makefile.am  ctrlm.h  ctrlm_config_default.json  ctrlm_controller.cpp  ctrlm_controller.h  ctrlm_database.cpp  ctrlm_database.h  ctrlm_device_update.cpp  ctrlm_device_update.h  ctrlm_device_update_iarm.cpp  ctrlm_log.h  ctrlm_main.cpp  ctrlm_main_iarm.cpp  ctrlm_network.cpp  ctrlm_network.h  ctrlm_network_iarm.cpp  ctrlm_rcu.cpp  ctrlm_rcu.h  ctrlm_rcu_iarm.cpp  ctrlm_recovery.cpp  ctrlm_recovery.h  ctrlm_rfc.cpp  ctrlm_rfc.h  ctrlm_tr181.cpp  ctrlm_tr181.h  ctrlm_utils.cpp  ctrlm_utils.h  ctrlm_validation.cpp  ctrlm_validation.h  ctrlm_vendor_network_factory.h  ctrlm_voice.cpp  ctrlm_voice.h  ctrlm_voice_iarm.cpp  ctrlm_voice_iarm.h  ctrlm_voice_packet_analysis.h  ctrlm_voice_session.cpp  ctrlm_voice_session.h  json_config.cpp  json_config.h
src/attributes/: ctrlm_attr.cpp  ctrlm_attr.h  ctrlm_attr_general.cpp  ctrlm_attr_general.h  ctrlm_version.cpp  ctrlm_version.h
src/ble/: ctrlm_ble_controller.cpp  ctrlm_ble_controller.h  ctrlm_ble_iarm.cpp  ctrlm_ble_iarm.h  ctrlm_ble_network.cpp  ctrlm_ble_network.h  ctrlm_ble_utils.cpp  ctrlm_ble_utils.h  ctrlm_hal_ble.cpp
src/config/: ctrlm_config.cpp  ctrlm_config.h  ctrlm_config_attr.cpp  ctrlm_config_attr.h  ctrlm_config_types.cpp  ctrlm_config_types.h
src/database/: ctrlm_database.cpp  ctrlm_database.h  ctrlm_db_attr.cpp  ctrlm_db_attr.h  ctrlm_db_types.cpp  ctrlm_db_types.h
src/irdb/: ctrlm_irdb.cpp  ctrlm_irdb.h  ctrlm_irdb_factory.cpp  ctrlm_irdb_factory.h  ctrlm_irdb_log.h  ctrlm_irdb_stub.cpp  ctrlm_irdb_stub.h
src/irdb/ipc/: ctrlm_irdb_ipc.h  ctrlm_irdb_ipc_iarm_thunder.cpp  ctrlm_irdb_ipc_iarm_thunder.h
src/rf4ce/: ctrlm_rf4ce_battery.cpp  ctrlm_rf4ce_controller.cpp  ctrlm_rf4ce_controller.h  ctrlm_rf4ce_device_update.cpp  ctrlm_rf4ce_discovery.cpp  ctrlm_rf4ce_indication.cpp  ctrlm_rf4ce_ir_rf_db.cpp  ctrlm_rf4ce_ir_rf_db.h  ctrlm_rf4ce_ir_rf_db_entry.cpp  ctrlm_rf4ce_ir_rf_db_entry.h  ctrlm_rf4ce_network.cpp  ctrlm_rf4ce_network.h  ctrlm_rf4ce_pairing.cpp  ctrlm_rf4ce_rcu.cpp  ctrlm_rf4ce_rib.cpp  ctrlm_rf4ce_utils.cpp  ctrlm_rf4ce_utils.h  ctrlm_rf4ce_validation.cpp
src/rf4ce/controller/attributes/: ctrlm_rf4ce_controller_attr_battery.cpp  ctrlm_rf4ce_controller_attr_battery.h  ctrlm_rf4ce_controller_attr_general.cpp  ctrlm_rf4ce_controller_attr_general.h  ctrlm_rf4ce_controller_attr_irdb.cpp  ctrlm_rf4ce_controller_attr_irdb.h  ctrlm_rf4ce_controller_attr_version.cpp  ctrlm_rf4ce_controller_attr_version.h  ctrlm_rf4ce_controller_attr_voice.cpp  ctrlm_rf4ce_controller_attr_voice.h
src/rf4ce/network/attributes/: ctrlm_rf4ce_network_attr_config.cpp  ctrlm_rf4ce_network_attr_config.h
src/rf4ce/rib/: ctrlm_rf4ce_rib.cpp  ctrlm_rf4ce_rib.h  ctrlm_rf4ce_rib_attr.cpp  ctrlm_rf4ce_rib_attr.h
src/rfc/: ctrlm_rfc.cpp  ctrlm_rfc.h  ctrlm_rfc_attr.cpp  ctrlm_rfc_attr.h
src/stubs/: stubs_hal_ip.cpp  stubs_hal_rf4ce.cpp  stubs_iarm.cpp  stubs_vendor_network_factory.cpp  stubs_voice_packet_analysis.cpp
src/telemetry/: ctrlm_telemetry.cpp  ctrlm_telemetry.h  ctrlm_telemetry_event.cpp  ctrlm_telemetry_event.h  ctrlm_telemetry_markers.h
src/thunder/: ctrlm_thunder_controller.cpp  ctrlm_thunder_controller.h  ctrlm_thunder_log.h  ctrlm_thunder_plugin.cpp  ctrlm_thunder_plugin.h  ctrlm_thunder_plugin_system_audio_player.cpp  ctrlm_thunder_plugin_system_audio_player.h
src/thunder/helpers/: ctrlm_thunder_helpers.cpp  ctrlm_thunder_helpers.h
src/thunder/plugins/: ctrlm_thunder_plugin_cec.cpp  ctrlm_thunder_plugin_cec.h  ctrlm_thunder_plugin_cec_common.h  ctrlm_thunder_plugin_cec_sink.cpp  ctrlm_thunder_plugin_cec_sink.h  ctrlm_thunder_plugin_cec_source.cpp  ctrlm_thunder_plugin_cec_source.h  ctrlm_thunder_plugin_display_settings.cpp  ctrlm_thunder_plugin_display_settings.h  ctrlm_thunder_plugin_hdmi_input.cpp  ctrlm_thunder_plugin_hdmi_input.h  ctrlm_thunder_plugin_system.cpp  ctrlm_thunder_plugin_system.h
src/voice/: ctrlm_voice_obj.cpp  ctrlm_voice_obj.h  ctrlm_voice_obj_generic.cpp  ctrlm_voice_obj_generic.h  ctrlm_voice_types.h
src/voice/endpoints/: ctrlm_voice_endpoint.cpp  ctrlm_voice_endpoint.h  ctrlm_voice_endpoint_http.cpp  ctrlm_voice_endpoint_http.h  ctrlm_voice_endpoint_sdt.cpp  ctrlm_voice_endpoint_sdt.h  ctrlm_voice_endpoint_ws.cpp  ctrlm_voice_endpoint_ws.h  ctrlm_voice_endpoint_ws_nextgen.cpp  ctrlm_voice_endpoint_ws_nextgen.h  ctrlm_voice_endpoint_ws_nsp.cpp  ctrlm_voice_endpoint_ws_nsp.h
src/voice/ipc/: ctrlm_voice_ipc.h  ctrlm_voice_ipc_iarm_all.cpp  ctrlm_voice_ipc_iarm_all.h  ctrlm_voice_ipc_iarm_legacy.cpp  ctrlm_voice_ipc_iarm_legacy.h  ctrlm_voice_ipc_iarm_thunder.cpp  ctrlm_voice_ipc_iarm_thunder.h  ctrlm_voice_ipc_request_type.h  ctrlm_voice_ipc_request_type.hash
src/voice/telemetry/: ctrlm_voice_telemetry_events.cpp  ctrlm_voice_telemetry_events.h
